# not-a-game

./: .gitignore  Cargo.toml  LICENSE  README.md  Taskfile.yml  Trunk.toml  index.html
.github/workflows/: build.yml
media/html/: about.html  styles.css
media/image/object/: explosion.json  launcher.json
media/image/terrorists/1/: blast.json  hurt.json  idle.json  walk.json
media/image/terrorists/2/: hurt.json  idle.json  shooting.json  walk.json
media/image/terrorists/3/: hurt.json  idle.json  shoot.json  walk.json
media/image/terrorists/4/: hurt.json  idle.json  shoot.json
src/: config.rs  logging.rs  main.rs  media.rs  prelude.rs  rand_helpers.rs  route.rs  tick.rs
src/animation/: data.rs
src/audio/: mod.rs  player.rs  system.rs
src/background/: actions.rs  data.rs  mod.rs  render.rs  systems.rs
src/bomber/: data.rs  systems.rs
src/camera/: actions.rs  data.rs  mod.rs  systems.rs
src/collision/: data.rs  debug.rs  intersection.rs  mod.rs  systems.rs
src/controller/: data.rs  helpers.rs  listeners.rs  mod.rs  queue.rs  systems.rs
src/delete/: data.rs  systems.rs
src/dom/: canvas.rs  mod.rs  state.rs  ui.rs
src/dom/atoms/: buttons.rs  help.rs  mod.rs
src/dom/theme/: color.rs  misc.rs  stylesheet.rs  typography.rs
src/dom/ui/: game.rs
src/dom/ui/game/: footer.rs  game_over.rs  help.rs  welcome.rs  winner.rs
src/dom/util/: mixins.rs
src/enemy/: data.rs  destroy.rs  events.rs  mod.rs  render.rs  select.rs
src/enemy/animation/: systems.rs
src/enemy/attack/: data.rs
src/enemy/controller/: data.rs  mod.rs  process.rs  systems.rs
src/enemy/effects/: data.rs
src/enemy/launcher/: data.rs  mod.rs  render.rs  systems.rs
src/enemy/physics/: data.rs  mod.rs  systems.rs
src/enemy/spawner/: actions.rs  data.rs  mod.rs
src/explosion/: animation.rs  data.rs  mod.rs  render.rs  systems.rs
src/game_over/: systems.rs
src/layout/: data.rs  mod.rs  systems.rs
src/projectiles/: data.rs  mod.rs  render.rs  systems.rs
src/renderer/: buffers.rs  data.rs  framebuffers.rs  mod.rs  shaders.rs  systems.rs  uvs.rs
src/renderer/shaders/fragment/: collision.frag  quad-texture.frag
src/renderer/shaders/vertex/: collision.vert  quad-unit.vert
src/spritesheet/: data.rs  mod.rs
src/utils/: bounds.rs  mod.rs  time.rs
